add some test about Song and Album